# Painting-Robot-Simulation

livox_laser_simulation/launch/: livox_simulation.launch
livox_laser_simulation/urdf/: livox_mid70.xacro
painting_simulations/painting_gazebo/: CMakeLists.txt  package.xml
painting_simulations/painting_gazebo/controllers/: arm_controllers.yaml
painting_simulations/painting_gazebo/launch/: painting_empty_world.launch  painting_hk_world.launch
painting_simulations/painting_gazebo/worlds/: hk.world
painting_simulations/painting_simulations/: CMakeLists.txt  package.xml
paintingrobot2_description/: urdf.rviz
paintingrobot2_description/launch/: display.launch
paintingrobot2_description/meshes/: base_link.STL  paintingendeffector.STL
paintingrobot2_description/urdf/: painting.gazebo.xacro  painting.urdf copy.xacro  painting.urdf.xacro  paintingrobot2_description.csv  paintingrobot2_description.urdf
paintingrobot2_description/urdf/sensors/: livox_mid70.xacro  stereo_camera.urdf.xacro  wge100_camera.urdf.xacro
