<?xml version="1.0"?>
<package format="2">
  <name>painting_simulations</name>
  <version>1.3.2</version>
  <description>
    ROS packages for the painting simulation (meta package)
  </description>
  <license>Apache 2.0</license>
  <maintainer email="yezefeng92@163.com">Zefeng Ye</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>painting_gazebo</exec_depend>
  <export><metapackage/></export>
</package>